<resources>
    <string name="app_name">SlimVXposed</string>
    <string name="wait">Please wait…</string>
    <string name="desktop">Desktop</string>
    <string name="add_app">Add App/Module</string>
    <string name="preparing">Opening the app…</string>
    <string name="delete">Delete</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="new_user">New User</string>
    <string name="enable">Enable</string>
    <string name="save">Save</string>
    <string name="save_success">Save success!</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="brand">Brand</string>
    <string name="device">Device</string>
    <string name="fake_device_info">Fake Device Info</string>
    <string name="wifi_status">Wifi Status</string>
    <string name="config_device_info">Device Info</string>
    <string name="about">About</string>
    <string name="clone_apps">Clone Apps</string>
    <string name="external_storage">External Storage</string>
    <string name="install_d">Install (%d)</string>
    <string name="install_too_much_once_time">Not recommand more then 9 apps be chosen at a time!</string>
    <string name="enable_xposed">enable xposed</string>
    <string name="module_install_success">Xposed moudle %s install success!</string>
    <string name="title_activity_setting">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data and Sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="SK_Settings">App Settings</string>
    <string name="SK_Thecoming">Comming soon</string>
    <string name="back">Back</string>
    <string name="restartapp">Restart Application</string>
    <string name="restartfinish">Restart can be done in 1 sec, is it miraculous?</string>
    <string name="SKRestartTips">Please click settings -> Restart Application to enable or disable modules.</string>
    <string name="ensurerestart">Wanna restart this application? Your changes must be saved or lost.</string>
    <string name="manualpath">Install By Path Manually</string>
    <string name="appInstallTip">Application is installing, take a while and swipe desktop for refresh.</string>
    <string name="about_info">Special thanks for Gan!##SandVXP is a application that can let user use Xposed module on non-root and non-bootloader-unlock devices. Clone application into this app and xposed modules, then validate it in menu\'s xposed manager, and they will work.##QQ 3068083845##E-Mail king@fou.ink##Website https://www.die.lu/</string>
    <string name="launch_failed">Launch app failed...</string>
    <string name="sys_crash">Application may crash but catch by SKActivity.</string>
    <string name="rom_shortcut_tips">We detected your device must accept permission manual. Please allow shortcut ceration permission in system settings. Allow this in Settings -> App Management -> Permission Management -> this application -> allow shortcut permission.</string>
    <string name="app_powered_by">Powered by SlimXposed</string>
    <string name="app_contributor">Yao Gan, Lixin Liang, Saurik</string>
    <string name="software_license">Introduction of SlimVXP Open Source Software Protocol  In order to effectively protect the transparency, purity, security and stability of the software used by users and the related rights and interests of the software enjoyed by users,  At the same time, it can better contribute to the sustainable development of domestic open source software. AMH official website drafted and formulated the following open source software protocol, named SandVXP open source software protocol.  SandVXP Open Source Software Agreement will strive to promote software transparency, open source innovation and development, advocate perfectionism, focus on quality, and call for respect for original copyright, promote adherence to the spirit of contract.  This software is produced for the organization, completely free and open source, has nothing to do with my company, and the software is used for non-profit.  The following protocols are abbreviated for use  Software Product Developer: Software Official  Software Product User: User  SandVXP Open Source Software Protocol Agreement  Software official Compliance Agreement  1) Prohibit the publication of closed source programs, all source program users can read.  2) Complete source code programs must be provided in any way, such as online downloads, CD-ROMs and disk copies.  3) Transparent source code programs must be provided, and obfuscation of source code programs by any reversible or irreversible means must be prohibited.  4) Prohibit any infringement, including software source code procedures, data documents, document information.  5) It is forbidden for software products to insert any advertising information, including text, image and media information, which is not related to the official software.  6) Prohibit any third-party plug-ins or components built into software products that are not related to the application of official software programs.  7) Prohibit any control program executed by remote response without user\'s permission.  8) SandVXP software does not bear any responsibility for the consequences of users\'use.  9) Please note that the software (and its source code) is not responsible for your security needs.  10) The original authors GanYao and Lixin Liang must be noted in the source code of this software. And the source of the software must be indicated.   User Compliance with Agreement  1) Users are prohibited from modifying any official copyright information of the software, including the description of the copyright agreement of the program, the official link of the software, the text description, the image logo and the media information.  2) It is forbidden for users to destroy or infringe upon the normal development and operation of the official software in any way, including the normal operation of the official software procedures and the commercial authorization mechanism.  Statement of Agreement Use and Entry into Force  Software authorities using the SandVXP Open Source Software Protocol need to annotate the use of the SandVXP Open Source Software Protocol and the accompanying protocol documentation in the source program annotations.  Since the user installs the software using SandVXP open source protocol, the protocol will take effect immediately.</string>
    <string name="accept">Accept</string>
    <string name="appchoose_tips">You can select files by this method. Click menu at right top and click \"Show Internal Storage\" at file explorer and do not choose third part file explorer or this method will failed.</string>
    <string name="search">Search</string>
    <string name="enable_search_app">Enable search app in app clone list.</string>
    <string name="disable">Disable</string>
    <string name="click_search_tips">Click search button left below this button for search. Swipe down for refreshing.</string>
    <string name="safe_mode">Safe Mode Control</string>
    <string name="safe_mode_tips">Disable this mode will bring risk such as trojan, malware etc. Make sure you can accept those risk and press disable button. You must know what risk you will undertake for.</string>
    <string name="safe_mode_enforcing">Safe mode is enforcing. Please turn off safe mode in application settings.</string>
    <string name="sk_failed">Failed</string>
    <string name="unknown_package">Safe mode is enforcing, an unknown package was arrested by installer. Disable safe mode in app settings.</string>
    <string name="still_safe">Make My Sandbox Safe!</string>
    <string name="non_stop">Prevent process from killing. Press enable for lead you to system settings.</string>
    <string name="title_activity_xapp_manager">SK AppManager</string>
    <string name="title_home">App Detail</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">App Notifications</string>
    <string name="delete_ok">Delete app finish. Swipe for refresh.</string>
    <string name="refresh">Refresh View</string>
    <string name="disable_notification">Disable/Enable Notification</string>
    <string name="perm_need_notify">Need Notification Permission</string>
    <string name="notify_disabled">Notification is already disabled.</string>
    <string name="title_activity_install_pkg">SK Package Installer</string>
    <string name="package_installer">Installing Package</string>
    <string name="ensure_install">Do you wanna install %s? Click Without dependence to avoid crash after sysapp uninstall.</string>
    <string name="install_success">Install %s Success!!!</string>
    <string name="upgrade_success">Update %s Success!!!</string>
    <string name="install_no_depend">Install Without Dependence</string>
    <string name="enable_odex">Enable DEX2OAT</string>
    <string name="ensure_odex">Are you sure to enable DEX2OAT? Enable this can speed up application, but modules cannot work anymore.</string>
    <string name="enable_floating_win">Enable Floating Window</string>
    <string name="open">Open</string>
    <string name="enable_fakeloc_gps">Ues network method instead of GPS method.</string>
    <string name="loc_latitude">Latitude</string>
    <string name="loc_longitude">Longitude</string>
    <string name="loc_speed">Current Speed</string>
    <string name="choose_app">Choose Application</string>
    <string name="app_loading_tips">If you stay too long on this page, press back button or press cancel for abort loading.</string>
    <string name="abort">Abort</string>
    <string name="sk_app_manual_install_tips">You can install application by input path absolutely（such as /sdcard/demo.apk). Then this applicaiton will launch installer for application install.</string>
</resources>