<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="io.virtualapp.home.SettingAct$GeneralPreferenceFragment"
        android:title="@string/about" />

    <header
        android:fragment="io.virtualapp.home.SettingAct$NotificationPreferenceFragment"
        android:title="@string/enable_search_app" />

    <header
        android:fragment="io.virtualapp.home.SettingAct$DataSyncPreferenceFragment"
        android:title="@string/safe_mode" />

    <header
        android:fragment="io.virtualapp.home.SettingAct$SKSettings"
        android:title="@string/SK_Settings" />

    <header
        android:fragment="io.virtualapp.home.SettingAct$SKsetAppLiving"
        android:title="@string/non_stop" />

    <header
        android:fragment="io.virtualapp.home.SettingAct$SKResstart"
        android:title="@string/restartapp" />

</preference-headers>
