<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sk.installapp.InstallPkgAct">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/title_activity_install_pkg"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_install_pkg" />

    <TextView
        android:id="@+id/installerTipsView"
        android:layout_marginRight="@dimen/dp16"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/package_installer"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/mainTextColor"
        android:textSize="30sp" />

    <ProgressBar
        android:id="@+id/pkgInstallPogressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:max="100"
        android:layout_marginRight="@dimen/dp16"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="300dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatInstallerRetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/dp80"
        android:src="@android:drawable/ic_delete" />

    <Button
        android:id="@+id/openUpBtn"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp8"
        android:text="@string/open" />


</android.support.design.widget.CoordinatorLayout>
